<resources>
    <string name="app_name">QlinkDemo</string>
    <string name="auth_phone">mobile phone number</string>
    <string name="auth_identify">authentication code</string>
    <string name="auth_identify_get">Get the authentication code</string>
    <string name="auth_identify_retry">retrieve </string>
    <string name="auth_identify_send_success">send successfully </string>
    <string name="auth_identify_send_failed">send failure</string>
    <string name="auth_new_password">new password</string>
    <string name="friend_remarks_hint">Please enter a comment name </string>
    <string name="friend_lists">list of friends</string>
    <string name="friend_detail">details </string>
    <string name="friend_of_mine">my good friend</string>
    <string name="robot_lists">robot</string>
    <string name="robot_select">select robot</string>
    <string name="robot_select_tip">Please select robot</string>
    <string name="robot_select_part_tip">Please select the moving part </string>
    <string name="chat_input_tip">input content </string>
    <string name="chat_send">send </string>
    <string name="chat_image">picture</string>
    <string name="chat_video">video chat </string>
    <string name="chat_audio">audio chat </string>
    <string name="chat_session">session </string>
    <string name="chat_friend">friend</string>
    <string name="chat_select_tip">can only select% 1 $d sheet</string>
    <string name="chat_response_agree">the other party agrees </string>
    <string name="chat_response_refuse">the other party refuses </string>
    <string name="chat_response_cancel">Cancellation of the other party </string>
    <string name="chat_response_busy">the other party is on the phone </string>
    <string name="chat_refuse">I refuse </string>
    <string name="chat_request_video">requesting video chat with %1$d </string>
    <string name="chat_get_request_video">%1$d The other party requests to chat with your video </string>
    <string name="auth_account">account number </string>
    <string name="auth_password">password</string>
    <string name="auth_login">login </string>
    <string name="auth_register">registration</string>
    <string name="auth_forget_password">Forget password</string>
    <string name="auth_login_by_identification">authentication code login </string>
    <string name="auth_login_success">login success </string>
    <string name="auth_login_failed">login failure</string>
    <string name="auth_phone_empty_tip">Mobile phone number cannot be empty </string>
    <string name="auth_password_empty_tip">Password cannot be empty </string>
    <string name="auth_identify_empty_tip">The validation code cannot be empty </string>
    <string name="auth_identify_error_tip">verification code mismatch </string>
    <string name="auth_phone_error_tip">incorrect mobile phone number </string>
    <string name="auth_account_error_tip">account format error </string>
    <string name="auth_update_success">successfully modified </string>
    <string name="auth_login_by_identification_tip">Log in with authentication code </string>
    <string name="auth_password_error">incorrect password </string>
    <string name="auth_account_or_password_empty_tip">account/mobile number cannot be empty </string>
    <string name="auth_account_not_exist_tip">Account does not exist </string>
    <string name="auth_register_already_tip">Registered </string>
    <string name="auth_register_done_tip">successful registration </string>
    <string name="video_refuse">reject </string>
    <string name="video_cancel">Cancel</string>
    <string name="video_pass"> by </string>
    <string name="video_switch">toggle </string>
    <string name="video_pause">pause</string>
    <string name="video_play">play</string>
    <string name="video_be_used_already">has been used </string>
    <string name="video_max_connect">more than the maximum number of connections </string>
    <string name="video_robot_offline">device not online </string>
    <string name="forget_password_title">Forget password</string>
    <string name="main_message">message</string>
    <string name="main_life">life</string>
    <string name="main_robot">machine</string>
    <string name="main_my">my </string>
    <string name="search">search </string>
    <string name="qh_select_country">select country/region</string>
    <string name="qh_loss_of_data">data loss </string>
    <string name="common_no_more">No more </string>
    <string name="common_ok">determine </string>
    <string name="common_update">modify </string>
    <string name="common_finish">complete </string>
    <string name="common_play">play</string>
    <string name="common_head">header</string>
    <string name="common_left_hand">left hand</string>
    <string name="common_right_hand">right hand</string>
    <string name="common_foot">foot</string>
    <string name="common_empty_tip">It seems that there is nothing in it </string>
    <string name="common_unknow_error">unknown error</string>
    <string name="common_no_read_permission">No read permission </string>
</resources>