<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <TextView
        android:id="@+id/login_country_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="@dimen/y_48"
        android:drawablePadding="@dimen/x_24"
        android:ellipsize="end"
        android:padding="10dp"
        android:singleLine="true"
        android:text="+86"
        android:drawableRight="@mipmap/right_arrow"
        android:textColor="@color/color_text_black"
        android:textSize="14sp" />
    <EditText
        android:id="@+id/forgot_user_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/auth_phone" />

    <EditText
        android:id="@+id/forgot_password_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/auth_new_password"
        android:inputType="textPassword"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/forgot_code_et"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:hint="@string/auth_identify"/>

        <Button
            android:id="@+id/forgot_code_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_identify_get"/>

    </LinearLayout>


    <Button
        android:id="@+id/forgot_btn"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/common_ok"
        android:layout_marginTop="20dp"/>

</LinearLayout>