<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_login"/>

    <Button
        android:id="@+id/start_register_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_register"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/start_forgot_password_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/auth_forget_password"
        android:layout_marginTop="16dp"/>

</LinearLayout>