<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/video_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#888888"/>

    <TextView
        android:id="@+id/video_text_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11111"
        android:textColor="@color/colorWhite"
        android:textSize="14sp"
        android:layout_centerInParent="true"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/video_reject_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_refuse" />

        <Button
            android:id="@+id/video_cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/video_cancel" />

        <Button
            android:id="@+id/video_confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/video_pass" />

        <Button
            android:id="@+id/video_switch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/video_switch"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/video_cancel_btn"
            android:layout_marginTop="8dp"/>

    </RelativeLayout>

</RelativeLayout>